# pico_uart_example

./: .gitignore  CMakeLists.txt  CMakeLists.txt.save  README.md  example_auto_set_url.cmake  run_openocd.sh
src/: main.c  progress.h  stats.c  stats.h
